Update test runtime/tooling for JDK 25