@@ -55,8 +55,9 @@
         <mockito.version>5.15.2</mockito.version>
         <spring.version>5.3.23</spring.version>
         <formatter-maven-plugin.version>2.23.0</formatter-maven-plugin.version>
-        <graalvm.version>21.1.0</graalvm.version>
+        <graalvm.version>24.2.2</graalvm.version>
         <buildnumber.version>3.2.1</buildnumber.version>
+        <jacoco.version>0.8.14</jacoco.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -204,7 +205,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version>
+                <version>${jacoco.version}</version>
                 <configuration>
                     <excludes>
                         <exclude>**/org/phoenicis/javafx/**</exclude>
@@ -233,7 +234,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx --add-opens java.base/java.lang=ALL-UNNAMED -Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading</argLine>
+                    <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED -Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
             </plugin>
         </plugins>
